--- a/src/clover_html/daily_report/main.css
+++ b/src/clover_html/daily_report/main.css
@@ -6,7 +6,7 @@ body {
 
 @font-face {
   font-family: "Noto Sans SC B";
-  src: url("./res/font/NotoSansSC-Bold.otf") format("opentype");
+  src: url("../res/font/NotoSansSC-Bold.otf") format("opentype");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -14,7 +14,7 @@ body {
 
 @font-face {
   font-family: "Noto Sans SC";
-  src: url("./res/font/NotoSansSC-Regular.otf") format("opentype");
+  src: url("../res/font/NotoSansSC-Regular.otf") format("opentype");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -22,7 +22,7 @@ body {
 
 @font-face {
   font-family: "SSFangTangTi";
-  src: url("./res/font/SSFangTangTi.ttf");
+  src: url("../res/font/SSFangTangTi.ttf");
 }
 
 .wrapper {
