fix: 修正图片路径，确保资源正确加载、调整文字背景颜色

--- a/src/clover_html/daily_report/main.css
+++ b/src/clover_html/daily_report/main.css
@@ -136,7 +136,7 @@ body {
 .moyu-title {
   border: #ffbdca 2px solid;
   position: absolute;
-  background-color: #fad5d5;
+  background-color: #f5e4e4;
   align-items: center;
   justify-content: center;
   border-radius: 10px;
