--- a/src/clover_html/cloud_music/info.css
+++ b/src/clover_html/cloud_music/info.css
@@ -32,7 +32,7 @@ body {
     box-sizing: border-box;
 }
 
-h1 {
+h1,h3 {
     width: 200px;
     margin: 0 auto;
     border-radius: 10px;
@@ -43,6 +43,10 @@ h1 {
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+}
+
+h3{
+    width: 150px!important;
 }
 
 .content{
